fixed include filename of Memory; changed to GMemory to remove conflicts with stdlib memory

--- a/src/QGlib/CMakeLists.txt
+++ b/src/QGlib/CMakeLists.txt
@@ -49,8 +49,12 @@ add_library(${QTGLIB_LIBRARY} ${SHARED_OR_STATIC} ${QtGLib_SRCS})
 set_target_properties(${QTGLIB_LIBRARY} PROPERTIES 
 	OUTPUT_NAME ${QTGLIB_LIBRARY}-${QTGLIB_API_VERSION}
 	SOVERSION ${QTGLIB_SOVERSION}
-	PREFIX ""
 	VERSION ${QTGSTREAMER_VERSION})
+
+if(WIN32)
+	set_target_properties(${QTGLIB_LIBRARY} PROPERTIES
+		PREFIX "")
+endif()
 
 target_link_libraries(${QTGLIB_LIBRARY}
 	LINK_PRIVATE ${GOBJECT_LIBRARIES}
