--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ enable_testing()
 cmake_policy(SET CMP0045 OLD)
 cmake_policy(SET CMP0042 NEW)
 
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 SET(CMAKE_DEBUG_POSTFIX "d")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_AUTOMOC ON)
